--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>~/startpage</title>
+    <title>New Tab</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="images/arch-logo-od.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="container">
         <div class="left-container">
             <div class="gif">
-                <img src="cat.gif" />
+                <img src="images/cat.gif" />
             </div>
         </div>
 
