--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>New Tab</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="images/arch-logo-od.png" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
         <div class="right-container">
             <div class="head">
-                <p>> cd ~/<span class="blinking">_</span></p>
+                <p><span id="time"></span></span></p>
             </div>
 
             <div class="bookmarks">
@@ -64,6 +64,7 @@
             </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
