Remove reddit link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                 <div class="category">
                     <div class="links">
-                        <li class="title"><a style="color: #EADBB2" href="https://reddit.com">reddit</a></li>
+                        <li class="title">reddit</li>
                         <li><a href="https://reddit.com/r/programming/">programming</a></li>
                         <li><a href="https://reddit.com/r/selfhosted/">selfhosted</a></li>
                         <li><a href="https://reddit.com/r/unixporn/">unixporn</a></li>
