--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
             <div class="bookmarks">
                 <div class="category">
                     <div class="links">
-                        <li class="title">work</li>
+                        <li class="title">school</li>
                         <li><a href="https://gmail.com">gmail</a></li>
                         <li><a href="https://outlook.office.com">outlook</a></li>
-                        <li><a href="https://linkedin.com">linkedin</a></li>
-                        <li><a href="https://vim.rtorr.com/">vim</a></li>
+                        <li><a href="https://quizlet.com/">quizlet</a></li>
+                        <li><a href="https://onedrive.live.com">onedrive</a></li>
                     </div>
                 </div>
 
@@ -36,29 +36,29 @@
                     <div class="links">
                         <li class="title">dev</li>
                         <li><a href="https://github.com/">github</a></li>
-                        <li><a href="https://lobste.rs/">lobste.rs</a></li>
-                        <li><a href="https://mankier.com/">mankier</a></li>
-                        <li><a href="https://devdocs.io/">devdocs</a></li>
+                        <li><a href="https://www.netlify.com/">netlify</a></li>
+                        <li><a href="https://tryhackme.com/login">tryhackme</a></li>
+                        <li><a href="https://www.overleaf.com/project">overleaf</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
-                        <li class="title">reddit</li>
-                        <li><a href="https://reddit.com/r/programming/">programming</a></li>
-                        <li><a href="https://reddit.com/r/selfhosted/">selfhosted</a></li>
-                        <li><a href="https://reddit.com/r/unixporn/">unixporn</a></li>
-                        <li><a href="https://reddit.com/r/mechanicalkeyboards/">mk</a></li>
+                        <li class="title">ent</li>
+                        <li><a href="https://lichess.org/">lichess</a></li>
+                        <li><a href="https://netflix.com">netflix</a></li>
+                        <li><a href="https://www.soap2day.ac/">movies</a></li>
+                        <li><a href="https://www.goodreads.com/">goodreads</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
-                        <li class="title">play</li>
+                        <li class="title">misc</li>
+                        <li><a href="https://tempmail.email/">tempmail</a></li>
                         <li><a href="https://monkeytype.com/">monkeytype</a></li>
-                        <li><a href="https://youtube.com/">youtube</a></li>
-                        <li><a href="https://twitch.tv/">twitch</a></li>
-                        <li><a href="https://netflix.com/">netflix</a></li>
+                        <li><a href="https://excalidraw.com/">excalidraw</a></li>
+                        <li><a href="https://latin-translator.com/">trahslator</a></li>
                     </div>
                 </div>
             </div>
