--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="bookmarks">
                 <div class="category">
                     <div class="links">
-                        <li class="title">school</li>
+                        <li class="title">拾 school</li>
                         <li><a href="https://gmail.com">gmail</a></li>
                         <li><a href="https://outlook.office.com">outlook</a></li>
                         <li><a href="https://quizlet.com/">quizlet</a></li>
