--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <li><a href="https://tempmail.email/">tempmail</a></li>
                         <li><a href="https://monkeytype.com/">monkeytype</a></li>
                         <li><a href="https://excalidraw.com/">excalidraw</a></li>
-                        <li><a href="https://latin-translator.com/">trahslator</a></li>
+                        <li><a href="https://latin-translator.com/">translator</a></li>
                     </div>
                 </div>
             </div>
