--- a/index.html
+++ b/index.html
@@ -26,39 +26,39 @@
                     <div class="links">
                         <li class="title">school</li>
                         <li><a href="https://gmail.com">gmail</a></li>
-                        <li><a href="https://outlook.office.com">outlook</a></li>
-                        <li><a href="https://quizlet.com/">quizlet</a></li>
-                        <li><a href="https://onedrive.live.com">onedrive</a></li>
+                        <li><a href="https://classroom.google.com/u/2/h">class</a></li>
+                        <li><a href="https://chatgpt.com/">gpt</a></li>
+                        <li><a href="https://drive.google.com/drive/u/2/home">drive</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
                         <li class="title">dev</li>
-                        <li><a href="https://github.com/">github</a></li>
-                        <li><a href="https://www.netlify.com/">netlify</a></li>
-                        <li><a href="https://tryhackme.com/login">tryhackme</a></li>
-                        <li><a href="https://www.overleaf.com/project">overleaf</a></li>
+                        <li><a href="https://es.pinterest.com/homefeed/">pinterest</a></li>
+                        <li><a href="https://www.reddit.com/">reddit</a></li>
+                        <li><a href="https://www.pirateproxy-bay.com/es/">tpb</a></li>
+                        <li><a href="https://firefly.adobe.com/">firefly</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
                         <li class="title">ent</li>
-                        <li><a href="https://lichess.org/">lichess</a></li>
-                        <li><a href="https://netflix.com">netflix</a></li>
+                        <li><a href="https://www.netflix.com/browse">netflix</a></li>
+                        <li><a href="https://www.youtube.com/">youtube</a></li>
+                        <li><a href="https://www.twitch.tv/">twitch</a></li>
                         <li><a href="https://www.soap2day.ac/">movies</a></li>
-                        <li><a href="https://www.goodreads.com/">goodreads</a></li>
                     </div>
                 </div>
 
                 <div class="category">
                     <div class="links">
-                        <li class="title">misc</li>
-                        <li><a href="https://tempmail.email/">tempmail</a></li>
-                        <li><a href="https://monkeytype.com/">monkeytype</a></li>
-                        <li><a href="https://excalidraw.com/">excalidraw</a></li>
-                        <li><a href="https://latin-translator.com/">translator</a></li>
+                        <li class="title">soci</li>
+                        <li><a href="https://www.instagram.com/">insta</a></li>
+                        <li><a href="https://soundcloud.com/ciroswag">soundcloud</a></li>
+                        <li><a href="https://y2mate.nu/en-DK77/">download</a></li>
+                        <li><a href=https://www.deepl.com/es/translator>translator</a></li>
                     </div>
                 </div>
             </div>
