--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>New Tab</title>
     <link rel="icon" href="images/arch-logo-od.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="manifest" href="/manifest.json">
 </head>
 
 <body>
