--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div class="bookmarks">
                 <div class="category">
                     <div class="links">
-                        <li class="title">school</li>
-                        <li><a href="https://gmail.com">gmail</a></li>
-                        <li><a href="https://classroom.google.com/u/2/h">class</a></li>
-                        <li><a href="https://chatgpt.com/">gpt</a></li>
+                        <li class="title">work</li>
+                        <li><a href="https://mail.google.com/mail/u/0/#inbox">gmail</a></li>
+                        <li><a href="https://www.printables.com/">printables</a></li>
+                        <li><a href="https://cults3d.com/en">cults3d</a></li>
                         <li><a href="https://drive.google.com/drive/u/2/home">drive</a></li>
                     </div>
                 </div>
@@ -36,7 +36,7 @@
                 <div class="category">
                     <div class="links">
                         <li class="title">dev</li>
-                        <li><a href="https://es.pinterest.com/homefeed/">pinterest</a></li>
+                        <li><a href="https://ar.pinterest.com/">pinterest</a></li>
                         <li><a href="https://www.reddit.com/">reddit</a></li>
                         <li><a href="https://www.pirateproxy-bay.com/es/">tpb</a></li>
                         <li><a href="https://firefly.adobe.com/">firefly</a></li>
@@ -56,8 +56,8 @@
                 <div class="category">
                     <div class="links">
                         <li class="title">soci</li>
-                        <li><a href="https://www.instagram.com/">insta</a></li>
-                        <li><a href="https://soundcloud.com/ciroswag">soundcloud</a></li>
+                        <li><a href="https://www.instagram.com/arcades_zombie/">insta</a></li>
+                        <li><a href="https://open.spotify.com/intl-es">spotify</a></li>
                         <li><a href="https://y2mate.nu/en-DK77/">download</a></li>
                         <li><a href=https://www.deepl.com/es/translator>translator</a></li>
                     </div>
